--- a/style.css
+++ b/style.css
@@ -105,3 +105,20 @@ pre code {
     top:0;
     font-size: 45px;
  }
+
+ /* Aufgabe */
+.rmddaumenregel {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  background: #f5f5f5;
+  position:relative;
+}
+
+.rmddaumenregel:before {
+    content: "\f109";
+    font-family: FontAwesome;
+    left:10px;
+    position:absolute;
+    top:0;
+    font-size: 45px;
+ }
