--- a/docs/style.css
+++ b/docs/style.css
@@ -107,14 +107,14 @@ pre code {
  }
 
  /* Aufgabe */
-.rmddaumenregel {
+.rmdtask {
   padding: 1em 1em 1em 4em;
   margin-bottom: 10px;
   background: #f5f5f5;
   position:relative;
 }
 
-.rmddaumenregel:before {
+.rmdtask:before {
     content: "\f109";
     font-family: FontAwesome;
     left:10px;
